--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,85 +1,90 @@
+# pyproject.toml
+
 [project]
-name = "template-py"
+name = "taskdantic"
 version = "0.1.0"
-description = "A Python project template with modern tooling."
+description = "Modern Pydantic-based Python library for Taskwarrior"
 readme = "README.md"
-requires-python = ">=3.13"
-license = { text = "MIT" }
-
+requires-python = ">=3.11"
 authors = [
-  { name = "Bullish Design", email = "BullishDesignEngineering@gmail.com" },
+    { name = "taskdantic", email = "taskdantic@example.com" }
 ]
-
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+]
 dependencies = [
-  "pydantic>=2.12.5",
+    "pydantic>=2.0",
 ]
 
 [project.optional-dependencies]
 dev = [
-  "pytest>=7.0",
-  "pytest-cov>=4.1",
-  "mypy>=1.10",
-  "ruff>=0.5.0",
+    "pytest>=7.0",
+    "pytest-cov>=4.0",
+    "mypy>=1.0",
+    "ruff>=0.1",
 ]
 
-#[project.urls]
-#homepage = "https://github.com/Bullish-Design/template-py"
-#repository = "https://github.com/Bullish-Design/template-py.git"
-
 [build-system]
-requires = ["hatchling>=1.18"]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-# Tell hatch which package to ship (your code lives in src/template_py)
-packages = ["src/template_py"]
-
-[tool.hatch.build.targets.sdist]
-include = [
-  "src",
-  "README.md",
-#  "SPEC.md",
-#  "docs",
-  "tests",
-  "pyproject.toml",
-]
-
-[tool.uv]
-# Keep the default behavior; this section is here so you can extend it later if needed.
+packages = ["src/taskdantic"]
 
 [tool.pytest.ini_options]
-addopts = "-q --cov=embeddify --cov-report=term-missing"
 testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "--verbose",
+    "--strict-markers",
+    "--strict-config",
+]
 
 [tool.mypy]
-python_version = "3.13"
-packages = ["src/template_py"]
-strict = true
-warn_unused_ignores = true
-warn_redundant_casts = true
+python_version = "3.11"
+warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
-disallow_untyped_calls = true
-no_implicit_optional = true
+check_untyped_defs = true
+strict = true
 
 [tool.ruff]
 line-length = 120
-target-version = "py313"
-src = ["src"]
+target-version = "py311"
 
 [tool.ruff.lint]
 select = [
-  "E",
-  "F",
-  "I",
-  "UP",
-  "B",
+    "E",   # pycodestyle errors
+    "W",   # pycodestyle warnings
+    "F",   # pyflakes
+    "I",   # isort
+    "B",   # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "UP",  # pyupgrade
 ]
 ignore = []
 
-[tool.ruff.format]
-quote-style = "double"
-indent-style = "space"
-line-ending = "lf"
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
 
+[tool.coverage.run]
+source = ["src/taskdantic"]
+branch = true
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "if TYPE_CHECKING:",
+    "raise AssertionError",
+    "raise NotImplementedError",
+]
