--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.11"
 dependencies = [
     "pydantic>=2.0.0",
     "python-dotenv>=1.2.1",
+    "typer>=0.9.0",
 ]
 
 [project.optional-dependencies]
@@ -17,6 +18,9 @@ dev = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[project.scripts]
+taskdantic = "taskdantic.cli:cli"
 
 [tool.ruff]
 line-length = 120
