--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.11"
 dependencies = [
     "pydantic>=2.0.0",
     "python-dotenv>=1.2.1",
+    "rich>=14.2.0",
     "typer>=0.9.0",
 ]
 
