--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,8 @@ dev = [
 ]
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["uv_build>=0.9.26,<0.10.0"]
+build-backend = "uv_build"
 
 #[tool.uv.extra-build-dependencies]
 #taskdantic = ["hatchling"]
