--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,16 @@ dev = [
     "ruff>=0.1.0",
 ]
 
-[build-system]
-requires = ["uv_build>=0.9.26,<0.10.0"]
-build-backend = "uv_build"
+#[build-system]
+#requires = ["uv_build>=0.9.26,<0.10.0"]
+#build-backend = "uv_build"
 
-#[tool.uv.extra-build-dependencies]
-#taskdantic = ["hatchling"]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.uv.extra-build-dependencies]
+taskdantic = ["hatchling"]
 
 
 [project.scripts]
