--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "taskdantic"
-version = "0.1.1"
+version = "0.1.2"
 description = "Pydantic models for Taskwarrior JSON format"
 requires-python = ">=3.11"
 dependencies = [
@@ -24,8 +24,8 @@ dev = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.uv.extra-build-dependencies]
-taskdantic = ["hatchling"]
+#[tool.uv.extra-build-dependencies]
+#taskdantic = ["hatchling"]
 
 
 [project.scripts]
