--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "taskdantic"
-version = "0.1.4"
+version = "0.1.5"
 description = "Pydantic models for Taskwarrior JSON format"
 requires-python = ">=3.11"
 dependencies = [
@@ -19,6 +19,9 @@ dev = [
 [build-system]
 requires = ["uv_build>=0.9.26,<0.10.0"]
 build-backend = "uv_build"
+
+[tool.uv.extra-build-dependencies]
+taskdantic = ["uv_build"]
 
 #[build-system]
 #requires = ["hatchling"]
