--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "taskdantic"
-version = "0.1.6"
+version = "0.1.7"
 description = "Pydantic models for Taskwarrior JSON format"
 requires-python = ">=3.11"
 dependencies = [
@@ -16,19 +16,19 @@ dev = [
     "ruff>=0.1.0",
 ]
 
-#[build-system]
-#requires = ["uv_build>=0.9.26,<0.10.0"]
-#build-backend = "uv_build"
-
-#[tool.uv.extra-build-dependencies]
-#taskdantic = ["uv_build"]
-
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["uv_build>=0.9.26,<0.10.0"]
+build-backend = "uv_build"
 
 [tool.uv.extra-build-dependencies]
-taskdantic = ["hatchling"]
+taskdantic = ["uv_build"]
+
+#[build-system]
+#requires = ["hatchling"]
+#build-backend = "hatchling.build"
+
+#[tool.uv.extra-build-dependencies]
+#taskdantic = ["hatchling"]
 
 
 [project.scripts]
